--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,10 @@
 buildscript {
     repositories {
-        maven { url 'http://dl.bintray.com/jetbrains/intellij-plugin-service' }
+        mavenCentral()
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+        maven { url "http://dl.bintray.com/jetbrains/intellij-plugin-service" }
+        maven { url "https://plugins.gradle.org/m2/" }
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
     }
 }
 plugins {
@@ -23,10 +27,16 @@ sourceSets {
 
     }
 }
+dependencies{
+    compile 'com.fifesoft:rsyntaxtextarea:2.6.0'
+
+}
 intellij {
     version 'IC-2016.2.5'
     pluginName 'GsonFormat'
     updateSinceUntilBuild false
+//    intellij.localPath = "/Applications/IntelliJ IDEA CE.app/Contents"
+
 
 //    publish {
 //        pluginId '7910'
